--- a/push_swap/.vscode/tasks.json
+++ b/push_swap/.vscode/tasks.json
@@ -7,7 +7,10 @@
                "args": [
                     "-fdiagnostics-color=always",
                     "-g",
-                    "${file}",
+                    "main.c",
+                    "init_number_utils.c",
+                    "init_number.c",
+                    "deque.c",
                     "-o",
                     "${fileDirname}/${fileBasenameNoExtension}"
                ],
