--- a/push_swap/.vscode/settings.json
+++ b/push_swap/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"files.associations": {
 		"push_swap.h": "c",
-		"unistd.h": "c"
+		"unistd.h": "c",
+		"stdio.h": "c",
+		"stdlib.h": "c"
 	}
 }
