--- a/push_swap/.vscode/tasks.json
+++ b/push_swap/.vscode/tasks.json
@@ -16,6 +16,7 @@
                     "operator3.c",
                     "utils.c",
                     "sort.c",
+                    "stack_sort.c",
                     "-o",
                     "${fileDirname}/${fileBasenameNoExtension}"
                ],
